<resources>
    <string name="app_name">Kinanuzzaman_MAPD711_Ex1</string>
    <string name="full_name">Full Name</string>

    <string name="qualification">Qualification</string>

    <string name="profession">Profession</string>
    <string name="hobby">Hobby</string>

    <string name="dream_job">Dream Job</string>
    <string name="send">Send</string>




    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="textview4">TextView4</string>
    <string name="textview">TextView</string>
</resources>